# revm-inspectors

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  JS_TRACER_INVESTIGATION.md  README.md  cliff.toml  deny.toml  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: js_tracer.rs  js_tracer_profile.rs
benches/testdata/: validationTracerV0_6.js  validationTracerV0_7.js
scripts/: changelog.sh
src/: access_list.rs  appearance.rs  counter_op.rs  edge_cov.rs  lib.rs  opcode.rs  opcount.rs  stack.rs  storage.rs  timeout.rs  transfer.rs
src/stack/: maybe_owned.rs  mod.rs
src/tracing/: arena.rs  config.rs  debug.rs  fourbyte.rs  mod.rs  mux.rs  opcount.rs  types.rs  utils.rs  writer.rs
src/tracing/builder/: geth.rs  parity.rs  walker.rs
src/tracing/js/: bigint.js  bindings.rs  builtins.rs  mod.rs
testdata/: Counter.sol
testdata/repro/: tx-aa-handleops-mainnet.json  tx-selfdestruct.json
tests/it/: accesslist.rs  appearance.rs  edge_cov.rs  geth.rs  geth_js.rs  main.rs  parity.rs  repro.rs  test_native_bigint.rs  transfer.rs  utils.rs  writer.rs
tests/it/repro/: mod.rs  prestate.rs
tests/it/writer/deploy_fail/: decoded.storage.txt  decoded.write_bytecodes.txt  decoded.write_bytecodes.write_storage_changes.txt  deploy_fail.decoded.txt  deploy_fail.decoded.write_bytecodes.txt  deploy_fail.txt  raw.write_bytecodes.txt
tests/it/writer/test_trace_printing/: 0.bytecodes.decoded.txt  0.bytecodes.txt  0.decoded.txt  0.storage.decoded.txt  0.storage.txt  0.write_bytecodes.txt  0.write_storage_changes.decoded.txt  1.bytecodes.storage.decoded.txt  1.bytecodes.storage.txt  1.storage.decoded.txt  1.storage.txt  1.txt  10.bytecodes.storage.decoded.txt  10.bytecodes.storage.txt  10.storage.decoded.txt  10.write_bytecodes.write_storage_changes.decoded.txt  10.write_bytecodes.write_storage_changes.txt  11.bytecodes.decoded.txt  11.bytecodes.storage.decoded.txt  11.bytecodes.storage.txt  11.decoded.txt  11.storage.decoded.txt  11.txt  11.write_storage_changes.txt  12.bytecodes.storage.decoded.txt  12.bytecodes.txt  12.storage.decoded.txt  12.storage.txt  12.txt  12.write_bytecodes.write_storage_changes.decoded.txt  12.write_storage_changes.txt  13.bytecodes.decoded.txt  13.storage.decoded.txt  13.storage.txt  13.txt  2.bytecodes.storage.txt  2.bytecodes.txt  2.decoded.txt  2.storage.decoded.txt  2.storage.txt  (+54 more)
