[package]
name = "revm-inspectors"
description = "Revm inspector implementations"
version = "0.39.0"
edition = "2021"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/revm-inspectors"
repository = "https://github.com/paradigmxyz/revm-inspectors"
categories = ["cryptography"]
keywords = ["ethereum", "evm", "inspectors", "tracing", "debugging"]
exclude = [
    ".github",
    "scripts",
    "testdata",
    "tests",
    "cliff.toml",
    "deny.toml",
    "release.toml",
]

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"
rustdoc.all = "warn"
clippy.lint_groups_priority = "allow"

[dependencies]
# eth
alloy-rpc-types-eth = { version = "2.0", default-features = false }
alloy-rpc-types-trace = { version = "2.0", default-features = false }
alloy-sol-types = { version = "1.4", default-features = false }
alloy-primitives = { version = "1.4", default-features = false, features = [
    "map",
] }
revm = { version = "38.0.0", default-features = false }

anstyle = { version = "1.0", optional = true }
colorchoice = "1.0"
thiserror = { version = "2.0", default-features = false }

# serde
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# js-tracer
boa_engine = { version = "0.21", optional = true }
boa_gc = { version = "0.21", optional = true }

[dev-dependencies]
alloy-hardforks = "0.4"
snapbox = { version = "0.6", features = ["term-svg"] }

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "anstyle/std",
    "serde/std",
    "serde_json/std",
    "revm/std",
    "thiserror/std",
]
serde = ["dep:serde", "revm/serde"]
js-tracer = ["dep:boa_engine", "dep:boa_gc"]

[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm", rev = "3ed3bdfed9ad6e5ba37f4e1f015436ab89ca98be" }
revm-bytecode = { git = "https://github.com/bluealloy/revm", rev = "3ed3bdfed9ad6e5ba37f4e1f015436ab89ca98be" }
revm-context = { git = "https://github.com/bluealloy/revm", rev = "3ed3bdfed9ad6e5ba37f4e1f015436ab89ca98be" }
revm-context-interface = { git = "https://github.com/bluealloy/revm", rev = "3ed3bdfed9ad6e5ba37f4e1f015436ab89ca98be" }
revm-database = { git = "https://github.com/bluealloy/revm", rev = "3ed3bdfed9ad6e5ba37f4e1f015436ab89ca98be" }
revm-database-interface = { git = "https://github.com/bluealloy/revm", rev = "3ed3bdfed9ad6e5ba37f4e1f015436ab89ca98be" }
revm-handler = { git = "https://github.com/bluealloy/revm", rev = "3ed3bdfed9ad6e5ba37f4e1f015436ab89ca98be" }
revm-inspector = { git = "https://github.com/bluealloy/revm", rev = "3ed3bdfed9ad6e5ba37f4e1f015436ab89ca98be" }
revm-interpreter = { git = "https://github.com/bluealloy/revm", rev = "3ed3bdfed9ad6e5ba37f4e1f015436ab89ca98be" }
revm-precompile = { git = "https://github.com/bluealloy/revm", rev = "3ed3bdfed9ad6e5ba37f4e1f015436ab89ca98be" }
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "3ed3bdfed9ad6e5ba37f4e1f015436ab89ca98be" }
revm-state = { git = "https://github.com/bluealloy/revm", rev = "3ed3bdfed9ad6e5ba37f4e1f015436ab89ca98be" }

