[package]
name = "revm-inspectors"
description = "Revm inspector implementations"
version = "0.41.1"
edition = "2021"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/revm-inspectors"
repository = "https://github.com/paradigmxyz/revm-inspectors"
categories = ["cryptography"]
keywords = ["ethereum", "evm", "inspectors", "tracing", "debugging"]
exclude = [
    ".github",
    "scripts",
    "testdata",
    "tests",
    "cliff.toml",
    "deny.toml",
    "release.toml",
]

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"
rustdoc.all = "warn"
clippy.lint_groups_priority = "allow"

[dependencies]
# eth
alloy-rpc-types-eth = { version = "2.0", default-features = false }
alloy-rpc-types-trace = { version = "2.0", default-features = false }
alloy-sol-types = { version = "1.4", default-features = false }
alloy-primitives = { version = "1.4", default-features = false, features = [
    "map",
] }
revm = { version = "41.0.0", default-features = false }

anstyle = { version = "1.0", optional = true }
colorchoice = "1.0"
thiserror = { version = "2.0", default-features = false }

# serde
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# js-tracer
boa_engine = { version = "0.21", optional = true }
boa_gc = { version = "0.21", optional = true }
# Work around time 0.3.48's conflicting conversion impls exposed through boa_engine.
# See https://github.com/time-rs/time/issues/783.
time = { version = "=0.3.47", optional = true, default-features = false }

[dev-dependencies]
alloy-hardforks = "0.4"
criterion = "0.8"
snapbox = { version = "1.2", features = ["term-svg"] }

[[bench]]
name = "js_tracer"
path = "benches/js_tracer.rs"
harness = false

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "anstyle/std",
    "serde/std",
    "serde_json/std",
    "revm/std",
    "thiserror/std",
]
serde = ["dep:serde", "revm/serde"]
js-tracer = ["dep:boa_engine", "dep:boa_gc", "dep:time"]

[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm", rev = "35d8fb4f97f90d7232964d3bc9a70c607a1d7f50" }
revm-bytecode = { git = "https://github.com/bluealloy/revm", rev = "35d8fb4f97f90d7232964d3bc9a70c607a1d7f50" }
revm-context = { git = "https://github.com/bluealloy/revm", rev = "35d8fb4f97f90d7232964d3bc9a70c607a1d7f50" }
revm-context-interface = { git = "https://github.com/bluealloy/revm", rev = "35d8fb4f97f90d7232964d3bc9a70c607a1d7f50" }
revm-database = { git = "https://github.com/bluealloy/revm", rev = "35d8fb4f97f90d7232964d3bc9a70c607a1d7f50" }
revm-database-interface = { git = "https://github.com/bluealloy/revm", rev = "35d8fb4f97f90d7232964d3bc9a70c607a1d7f50" }
revm-handler = { git = "https://github.com/bluealloy/revm", rev = "35d8fb4f97f90d7232964d3bc9a70c607a1d7f50" }
revm-inspector = { git = "https://github.com/bluealloy/revm", rev = "35d8fb4f97f90d7232964d3bc9a70c607a1d7f50" }
revm-interpreter = { git = "https://github.com/bluealloy/revm", rev = "35d8fb4f97f90d7232964d3bc9a70c607a1d7f50" }
revm-precompile = { git = "https://github.com/bluealloy/revm", rev = "35d8fb4f97f90d7232964d3bc9a70c607a1d7f50" }
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "35d8fb4f97f90d7232964d3bc9a70c607a1d7f50" }
revm-state = { git = "https://github.com/bluealloy/revm", rev = "35d8fb4f97f90d7232964d3bc9a70c607a1d7f50" }
